Deep rewrite of Annotations, JDBC, and HTTP topics (batch 8)
by-topic/language/annotations/index.md (510 → 751 lines):
- APT: AbstractProcessor, multi-round processing, code generation
- TYPE_USE (JEP 104): Checker Framework, @NonNull ecosystem
- @Repeatable: container constraints, getAnnotationsByType
- Meta-annotations: @Target/@Retention/@Inherited details
- Standard annotations: @Deprecated enhancements, JDK internals
- Framework patterns: Spring/JPA/Validation annotation design

by-topic/api/jdbc/index.md (576 → 899 lines):
- Architecture: DriverManager → DataSource → Connection chain
- Connection pools: HikariCP config, virtual thread Semaphore
- PreparedStatement: SQL injection prevention, server-side prep
- Transactions: isolation levels, Savepoint, XA distributed
- Batch processing: modular batching, rewriteBatchedStatements
- ResultSet types: cursor modes, fetchSize streaming
- Virtual thread compatibility: auto-unmount, pool sizing

by-topic/concurrency/http/index.md (721 → 1059 lines):
- Evolution: HttpURLConnection → HttpClient → HTTP/3
- HttpClient API: Builder config, all parameters
- Sync vs async: CompletableFuture patterns, selection guide
- HTTP/2: multiplexing diagram, HPACK compression
- HTTP/3 (JEP 517): QUIC, 0-RTT, connection migration
- WebSocket: Listener callbacks, backpressure
- Performance: connection pool tuning, virtual thread patterns

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>